modify bug and add recommand
