# openapi/schemas/term.yaml
@@ -231,22 +231,85 @@ TermCreateRequest:
       $ref: './enums.yaml#/TermStatus'
 
 TermUpdateRequest:
-  allOf:
-    - $ref: '#/TermCreateRequest'
-    - type: object
-      description: 표준 용어 수정 요청
-      required:
-        - version
-        - changeReason
-      properties:
-        version:
-          type: string
-          minLength: 1
-          example: '1.1'
-        changeReason:
-          type: string
-          minLength: 1
-          example: 업무 정의 보완
+  type: object
+  description: 표준 용어 수정 요청
+  required:
+    - domainName
+    - usageType
+    - koreanName
+    - englishName
+    - englishAbbreviation
+    - businessDefinition
+    - physicalType
+    - digits
+    - decimalPoint
+    - owner
+    - version
+    - changeReason
+  properties:
+    domainName:
+      type: string
+      minLength: 1
+      maxLength: 100
+      example: 고객
+    usageType:
+      type: string
+      minLength: 1
+      maxLength: 50
+      example: 표준항목
+    koreanName:
+      type: string
+      minLength: 1
+      maxLength: 200
+      example: 고객번호
+    englishName:
+      type: string
+      minLength: 1
+      maxLength: 300
+      example: Customer Number
+    englishAbbreviation:
+      type: string
+      minLength: 1
+      maxLength: 100
+      pattern: '^[A-Z][A-Z0-9_]*$'
+      example: CUST_NO
+    businessDefinition:
+      type: string
+      minLength: 1
+      example: 회사에서 고객을 업무적으로 식별하기 위해 사용하는 번호
+    usageContext:
+      type: string
+      example: 주문, 계약, 청구, 상담 등에서 고객 식별 기준으로 사용
+    physicalType:
+      type: string
+      minLength: 1
+      maxLength: 50
+      example: VARCHAR
+    digits:
+      type: integer
+      format: int32
+      minimum: 0
+      example: 20
+    decimalPoint:
+      type: integer
+      format: int32
+      minimum: 0
+      example: 0
+    owner:
+      type: string
+      minLength: 1
+      maxLength: 200
+      example: 고객도메인 데이터스튜어드
+    status:
+      $ref: './enums.yaml#/TermStatus'
+    version:
+      type: string
+      minLength: 1
+      example: '1.1'
+    changeReason:
+      type: string
+      minLength: 1
+      example: 업무 정의 보완
 
 TermExpression:
   type: object
